--- a/src/locales/ja.po
+++ b/src/locales/ja.po
@@ -30,3 +30,7 @@ msgstr "テスト タイプスクリプト"
 
 msgid "world"
 msgstr "世界"
+
+msgid "{num, plural, one {There is a message.} other {There are # messages.}}"
+msgstr "{num, plural, other {メッセージがあります。}}"
+
